# Nufast_

./: README.md  nufast package demo.ipynb
nufast/: License  Notice  pyproject.toml
nufast/nufast/: __init__.py  oscillation.py
nufast/nufast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
