[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nufast"
version = "0.1.0"
description = "Fast neutrino oscillation simulator"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = [
    "numpy",
    "matplotlib"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/nufast"
